--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexacrm-landing",
+  "name": "kabahub-landing",
   "version": "1.0.0",
-  "description": "NexaCRM SaaS Landing Page",
+  "description": "KabaHub SaaS Landing Page",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
